# logwise

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT.md  NOTICE  README.md
.cargo/: config.toml
.github/workflows/: ci.yaml
dlog-proc/: Cargo.toml
dlog-proc/src/: lib.rs
dlog_proc/: Cargo.toml
dlog_proc/src/: lib.rs
logwise_proc/: Cargo.toml
logwise_proc/src/: debug_internal.rs  error.rs  info.rs  lformat.rs  lib.rs  mandatory.rs  parser.rs  perfwarn.rs  profile.rs  profile_attr.rs  trace.rs  warn.rs
scripts/wasm32/: serve  tests
src/: context.rs  dispatch.rs  global_logger.rs  heartbeat.rs  inmemory_logger.rs  interval.rs  level.rs  lib.rs  local_logger.rs  log_record.rs  logger.rs  macros.rs  privacy.rs  spinlock.rs  stderror_logger.rs  sys.rs
src/context/: apply_context.rs  context_impl.rs  task.rs  tests.rs
tests/: debuginternal.rs  heartbeat.rs  macro_refactor.rs  perfwarn_if.rs  print_demo.rs
