[package]
name = "logwise"
version = "0.4.0"
authors = ["Drew Crawford <drew@sealedabstract.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "an opinionated logging library for Rust"
homepage = "https://sealedabstract.com/code/logwise"
repository = "https://github.com/drewcrawford/logwise"
keywords = ["logging"]
categories = ["development-tools::debugging", "development-tools::profiling"]
rust-version = "1.85.0"

exclude = [".*"]

[dependencies]
logwise_proc = { path = "logwise_proc", version = "0.3.0" }

[dev-dependencies]

[features]
logwise_internal = []

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2.105"
web-time = "1.1"
web-sys = {version = "0.3",features=["console"]}
# PeriodicDrainToConsole
wasm_thread = "0.3.3"


[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.45"
# for print_demo
wasm_thread = "0.3"


